syntax = "proto3";

package example.greeting;

option go_package="example/protos";
option java_package="com.example.grpc.protos";

message Greeter {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeter greeter = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService{
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};

  // Client Streaming
  rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};

  // Bi-directional Streaming
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};
}
